Sn-969 Revise ROS Node to add correct odom messages and INS type messages (#92)
* Current progress - new messages of IS type

* Current Progress

* Need to fill out covariance stuff

* Finished NavSatFix

* A few typos are rearrangement

* Bump SDK

* Covariance matrix variables prepped.

* Bump SDK

* Add identity Matrix at startup

* Transform IMU body velocities to various frames

* NavSatFix Msg Covariance

* average of preint_imu

* Typos and more customizable messages

* Typo

* Fix topic names

* Typos in comments

* LD to covariance

* sdk update

* re-ordering of covariance blocks from uINS order to ROS order

* comments

* covariance computation update

* Averaging sensors

* Finished ECEF pose and twist covariance computation

* cleanup

* code simplified

* Added NED covariance transform

* Added ENU covariance transform

* Current Progress

* Matched types

* Changed to conjugate rotation

* Fix Typos

* Replace legacy param name

* Enable or disable covariance

* Updated README and removed the rest of ASCII

* TF publisher

* Rotation changes

Co-authored-by: Alexander Bogdanov <alex.bogdanov@inertialsense.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,9 @@ add_message_files(
   GNSSObservation.msg
   GNSSObsVec.msg
   INL2States.msg
+  DID_INS2.msg
+  DID_INS1.msg
+  DID_INS4.msg
 )
 
 add_service_files(
