--- a/launch/test_params.yaml
+++ b/launch/test_params.yaml
@@ -22,6 +22,7 @@ inertial_sense_ros:
   stream_diagnostics: false
   publishTf: true
   enable_log: false
+  ioConfig: 39624800  #F9P RUG2 RTK CMP: 0x025ca060
   #RTK_server_mount: ""
   #RTK_server_username: ""
   #RTK_server_password: ""
@@ -42,10 +43,11 @@ inertial_sense_ros:
   # # every time we attempt to connect only try one time -->
   # RTK_connection_attempt_limit: 1
   GPS_type: "F9P"
-  RTK_rover: false
+  RTK_rover: true
   RTK_rover_radio_enable: false
-  RTK_base: false
-  dual_GNSS: false
+  RTK_base_USB: true
+  RTK_base_serial: true
+  dual_GNSS: true
   inclination: 0
   declination: 0
   dynamic_model: 8
