Param fixes on sample files

--- a/launch/test_params.yaml
+++ b/launch/test_params.yaml
@@ -47,7 +47,7 @@ inertial_sense_ros:
   RTK_base_USB: false
   RTK_base_serial: false
   RTK_base_TCP: false
-  dual_GNSS: false
+  GNSS_Compass: false
   inclination: 0
   declination: 0
   dynamic_model: 8
