--- a/launch/test_params.yaml
+++ b/launch/test_params.yaml
@@ -22,20 +22,20 @@ inertial_sense_ros:
   stream_diagnostics: false
   publishTf: true
   enable_log: false
-  ioConfig: 39624800  #F9P EVB2 RTK CMP: 0x025ca060
+  ioConfig: 0x025ca060  #F9P EVB2 RTK CMP: 0x025ca060
   # ioConfig: 41056
   #RTK_server_mount: ""
   #RTK_server_username: ""
   #RTK_server_password: ""
   # every time we attempt to connect only try one time -->
-  RTK_connection_attempt_limit: 1
+  RTK_connection_attempt_limit: 3
   # default back off ignored because only connecting once -->
   RTK_connection_attempt_backoff: 2
   # watchdog timer enabled -->
   RTK_connectivity_watchdog_enabled: true
   # check every 1 second for traffic -->
   RTK_connectivity_watchdog_timer_frequency: 1
-  # after 5 seconds of not having any data try to con0nect again -->
+  # after 5 seconds of not having any data try to connect again -->
   RTK_data_transmission_interruption_limit: 5
   RTK_correction_protocol: "RTCM3"
   # # TCP - Inertial Sense
